manifests/pdf-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf-service
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pdf-service
  template:
    metadata:
      labels:
        app: pdf-service
    spec:
      containers:
        - name: pdf-service
          image: pdf_service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5001
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: pdf-service
  namespace: app
spec:
  selector:
    app: pdf-service
  ports:
    - port: 5001
      targetPort: 5001
